--- a/package.json
+++ b/package.json
@@ -22,8 +22,14 @@
     "@babel/preset-env": "^7.7.4",
     "babel-loader": "^8.0.6",
     "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0",
     "scss-compile": "^0.1.7",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
+  },
+  "devDependencies": {
+    "css-loader": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "style-loader": "^1.0.0"
   }
 }
