--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@babel/preset-env": "^7.7.4",
     "babel-loader": "^8.0.6",
     "d3": "^5.14.2",
-    "mapbox-gl": "^1.5.0",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
     "scss-compile": "^0.1.7",
+    "topojson-client": "^3.1.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
