Update package license

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/Asduveneck/Sick-Maps.git"
   },
   "author": "Alex Duveneck",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Asduveneck/Sick-Maps/issues"
   },
