--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "old_start": "webpack --mode=development --watch",
+    "scssReload": "node-sass -w assets/stylesheets/ assets/stylesheets/output.css",
     "scss": "node-sass assets/stylesheets/entry_style.scss assets/stylesheets/output.css",
     "start": "node server.js",
     "heroku-postbuild": "webpack -p" 
